tests/expectations/compiler/array/access_in_loop_fail.out
Error [ETYC0372076]: An array cannot be empty
    --> compiler-test:6:13
     |
   6 |             let arr: [u32; i] = [1u32, 2u32]; // this should fail for all iterations except 2
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `[u32; 0]` but type `[u32; 2]` was found.
    --> compiler-test:6:33
     |
   6 |             let arr: [u32; i] = [1u32, 2u32]; // this should fail for all iterations except 2
     |                                 ^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `[u32; 1]` but type `[u32; 2]` was found.
    --> compiler-test:6:33
     |
   6 |             let arr: [u32; i] = [1u32, 2u32]; // this should fail for all iterations except 2
     |                                 ^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `[u32; 3]` but type `[u32; 2]` was found.
    --> compiler-test:6:33
     |
   6 |             let arr: [u32; i] = [1u32, 2u32]; // this should fail for all iterations except 2
     |                                 ^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `[u32; 4]` but type `[u32; 2]` was found.
    --> compiler-test:6:33
     |
   6 |             let arr: [u32; i] = [1u32, 2u32]; // this should fail for all iterations except 2
     |                                 ^^^^^^^^^^^^
